todo_app/manifests/deployment_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-depl
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: todo-app-claim
      containers:
        - name: todo-app
          image: skinatro/todo-app:latest
          volumeMounts:
            - name: shared-image
              mountPath: /usr/src/app/static
