todo_app/manifests/deployment_back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-backend-depl
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app-backend
  template:
    metadata:
      labels:
        app: todo-app-backend
    spec:
      containers:
        - name: todo-app-backend
          image: skinatro/todo-app-back:latest
