todo_app/manifests/service_back.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-backend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-app-backend
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
